[package]
name = "warp-rs"
version = "0.1.0"
authors = ["Martijn van Eijk <mfveijk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
warp = "0.3"
futures = "0.3.14"
pretty_env_logger = "0.4.0"
rand = "0.8.3"